refactor language enum